--- a/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
+++ b/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="3Bp-zf-jwd">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -571,30 +570,20 @@
                                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                         <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" priority="385" constant="85" id="jzG-2I-9Gp"/>
+                                            <constraint firstAttribute="height" constant="85" id="jzG-2I-9Gp"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="yes" keyboardType="twitter"/>
                                     </textView>
-                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I50-pt-ooA">
-                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="216" id="0ZG-1v-W0d"/>
-                                        </constraints>
-                                    </view>
                                 </subviews>
                                 <color key="backgroundColor" red="0.05000000074505806" green="0.05000000074505806" blue="0.05000000074505806" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="Cit-Ms-vJp" secondAttribute="trailing" id="6ZX-JX-KdP"/>
                                     <constraint firstItem="PY6-5W-SRh" firstAttribute="top" secondItem="Cit-Ms-vJp" secondAttribute="bottom" id="7xB-f9-PFS"/>
-                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="PY6-5W-SRh" secondAttribute="bottom" constant="220" id="D63-C2-f7i"/>
                                     <constraint firstItem="PY6-5W-SRh" firstAttribute="leading" secondItem="Hpz-QJ-bJr" secondAttribute="leading" constant="10" id="KOP-Zg-7VQ"/>
-                                    <constraint firstAttribute="trailing" secondItem="I50-pt-ooA" secondAttribute="trailing" id="KZQ-eq-oMQ"/>
                                     <constraint firstItem="Cit-Ms-vJp" firstAttribute="leading" secondItem="Hpz-QJ-bJr" secondAttribute="leading" id="Qpc-9c-OKH"/>
                                     <constraint firstAttribute="trailing" secondItem="PY6-5W-SRh" secondAttribute="trailing" constant="10" id="gtY-zG-VwY"/>
-                                    <constraint firstAttribute="bottom" secondItem="I50-pt-ooA" secondAttribute="bottom" id="mmF-qP-Psk"/>
                                     <constraint firstItem="Cit-Ms-vJp" firstAttribute="top" secondItem="Hpz-QJ-bJr" secondAttribute="top" id="nbV-NE-6Gc"/>
-                                    <constraint firstItem="I50-pt-ooA" firstAttribute="leading" secondItem="Hpz-QJ-bJr" secondAttribute="leading" id="qkL-Wn-gi2"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -726,7 +715,6 @@
                     <size key="freeformSize" width="320" height="568"/>
                     <connections>
                         <segue destination="0Hb-dd-ez9" kind="push" identifier="pushSettingsSegue" id="bTt-Mn-4jt"/>
-                        <segue destination="Hk4-y1-dJH" kind="push" identifier="pushPhotosSegue" id="5Gp-6F-wwh"/>
                         <segue destination="Ikh-cP-T3a" kind="push" identifier="pushEditProfileSegue" id="gvj-oK-KBl"/>
                         <segue destination="S59-2g-byz" kind="push" identifier="pushSocialList" id="5Re-9j-q5p"/>
                     </connections>
@@ -1161,11 +1149,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OsJ-Md-wac" customClass="FluxAnimatingLogo">
-                                <frame key="frameInset" minX="114" minY="230" width="93" height="108"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
-                            </view>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RuW-dy-GsI">
                                 <frame key="frameInset" minY="568" width="320" height="408"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -1303,8 +1286,18 @@
                                     <action selector="backdoorButtonAction:" destination="ODM-aT-N2z" eventType="touchUpInside" id="xAb-ud-2Cz"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="mAW-bR-90x">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="140" id="4pd-Yz-Rdr"/>
+                                    <constraint firstAttribute="height" constant="140" id="p5N-cB-OFp"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.91764705882352937" green="0.24705882352941178" blue="0.24705882352941178" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.92941176470588238" green="0.14117647058823529" blue="0.30980392156862746" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="mAW-bR-90x" firstAttribute="centerX" secondItem="S58-5P-rnV" secondAttribute="centerX" id="qMw-h2-y6Z"/>
+                            <constraint firstItem="mAW-bR-90x" firstAttribute="centerY" secondItem="S58-5P-rnV" secondAttribute="centerY" constant="-40" id="vrC-hs-Pjb"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="kOI-MA-uNB"/>
                     <nil key="simulatedTopBarMetrics"/>
@@ -1315,7 +1308,6 @@
                         <outlet property="loginElementsContainerView" destination="RuW-dy-GsI" id="jWI-ua-hQY"/>
                         <outlet property="loginToggleButton" destination="13a-C5-GsC" id="hMY-wA-349"/>
                         <outlet property="loginTogglePromptLabel" destination="wle-Vx-hac" id="b28-Z9-dxK"/>
-                        <outlet property="logoImageView" destination="OsJ-Md-wac" id="Lfd-cq-Ad7"/>
                         <outlet property="signInOptionsLabel" destination="XWl-PZ-v85" id="UKj-bA-UKd"/>
                         <outlet property="tableView" destination="0Rt-aQ-rNK" id="JFd-B6-t2i"/>
                         <outlet property="topSeparator" destination="mf9-MM-b8u" id="UUT-Po-sQE"/>
@@ -1422,7 +1414,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" rotateEnabled="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hT0-9E-Cfm" customClass="MIMapView">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" mapType="standard" rotateEnabled="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hT0-9E-Cfm" customClass="MIMapView">
+                                <frame key="frameInset" width="1000" height="1000"/>
                                 <gestureRecognizers/>
                                 <connections>
                                     <outlet property="delegate" destination="YQi-AC-BdW" id="Enu-U9-q0v"/>
@@ -1508,6 +1501,7 @@
                         <outlet property="fluxMapView" destination="hT0-9E-Cfm" id="Ee6-sb-9KA"/>
                         <outlet property="searchBar" destination="gRf-3U-PdM" id="EyZ-nC-2xb"/>
                         <outlet property="searchBarBottomConstraint" destination="zm5-D8-yC7" id="sxv-4s-Xb0"/>
+                        <segue destination="fsU-sf-5o0" kind="modal" identifier="photosSegue" id="2uy-Ty-nEj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="t8M-tD-94Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -2021,7 +2015,7 @@
         <!--Your Photos-->
         <scene sceneID="PoS-IU-SUS">
             <objects>
-                <collectionViewController title="Your Photos" id="Hk4-y1-dJH" customClass="FluxProfilePhotosViewController" sceneMemberID="viewController">
+                <collectionViewController title="Your Photos" id="Hk4-y1-dJH" customClass="FluxPhotosViewController" sceneMemberID="viewController">
                     <collectionView key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" id="BSi-15-rkx">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -2075,39 +2069,24 @@
                             <outlet property="delegate" destination="Hk4-y1-dJH" id="Cmf-pv-dt3"/>
                         </connections>
                     </collectionView>
-                    <toolbarItems>
-                        <barButtonItem title="Make Private" id="5bm-su-GXz">
-                            <connections>
-                                <action selector="editPrivacyButtonAction:" destination="Hk4-y1-dJH" id="BYK-0T-1m2"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem style="plain" systemItem="flexibleSpace" id="LQQ-SN-NYo"/>
-                        <barButtonItem systemItem="trash" id="zvu-vU-3lN">
-                            <connections>
-                                <action selector="garbageButtonAction:" destination="Hk4-y1-dJH" id="elY-ry-avN"/>
-                            </connections>
-                        </barButtonItem>
-                    </toolbarItems>
+                    <toolbarItems/>
                     <navigationItem key="navigationItem" title="Photos" id="LJJ-lU-bmv">
-                        <barButtonItem key="rightBarButtonItem" title="Edit" id="nd7-kF-x8E">
+                        <barButtonItem key="rightBarButtonItem" title="Done" id="5hh-SX-0Qw">
                             <connections>
-                                <action selector="editButtonAction:" destination="Hk4-y1-dJH" id="eXH-Yx-AN6"/>
+                                <action selector="DoneButtonAction:" destination="Hk4-y1-dJH" id="5ZJ-Bu-jWX"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
-                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="320" height="568"/>
                     <connections>
-                        <outlet property="editBarButton" destination="nd7-kF-x8E" id="NPq-aG-EGt"/>
-                        <outlet property="editPrivacyButton" destination="5bm-su-GXz" id="FBf-ck-5MD"/>
-                        <outlet property="garbageButton" destination="zvu-vU-3lN" id="pbS-0g-CAL"/>
                         <outlet property="theCollectionView" destination="BSi-15-rkx" id="ABi-6O-DPw"/>
                     </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ijg-Ri-Urg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4230" y="40"/>
+            <point key="canvasLocation" x="4033" y="-295"/>
         </scene>
         <!--Flux Edit Caption View Controller-->
         <scene sceneID="JRU-YA-Zx1">
@@ -2210,7 +2189,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EXr-sX-Y7e" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4696" y="40"/>
+            <point key="canvasLocation" x="5282.5" y="39.5"/>
         </scene>
         <!--Edit Profile-->
         <scene sceneID="wsh-xG-gjZ">
@@ -2261,7 +2240,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HaT-6D-Y1w" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3724" y="-123"/>
+            <point key="canvasLocation" x="4311" y="-123"/>
         </scene>
         <!--Filters-->
         <scene sceneID="98b-gV-sNd">
@@ -3275,8 +3254,27 @@
             </objects>
             <point key="canvasLocation" x="4626" y="1373"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Zzf-jh-cHV">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="fsU-sf-5o0" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="Hxv-Uh-hR2">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Hk4-y1-dJH" kind="relationship" relationship="rootViewController" id="VVU-1U-U7r"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LG5-OO-qXs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3445.5" y="-295.5"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="Logo" width="136" height="140"/>
         <image name="MapBackToggle" width="140" height="140"/>
         <image name="MapMe" width="26" height="26"/>
         <image name="backgroundGradient_bottom" width="640" height="276"/>
